kubernetes/local_django_api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-api
  template:
    metadata:
      labels:
        app: django-api
    spec:
      containers:
      - name: django-api
        image: your-django-api-image
